added all the navigation graphs of the app

--- a/app/src/main/res/navigation/top_level_navigation_graph.xml
+++ b/app/src/main/res/navigation/top_level_navigation_graph.xml
@@ -9,5 +9,18 @@
         android:id="@+id/splashScreenFragment"
         android:name="io.github.chhabra_dhiraj.poempre.ui.main.SplashScreenFragment"
         android:label="@string/label_splash_screen_fragment_top_level_navigation_graph"
-        tools:layout="@layout/fragment_splash_screen" />
+        tools:layout="@layout/fragment_splash_screen" >
+        <action
+            android:id="@+id/action_splashScreenFragment_to_authentication_navigation_graph"
+            app:destination="@id/authentication_navigation_graph"
+            app:popUpTo="@id/splashScreenFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_splashScreenFragment_to_main_content_navigation_graph"
+            app:destination="@id/main_content_navigation_graph"
+            app:popUpTo="@id/splashScreenFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <include app:graph="@navigation/authentication_navigation_graph" />
+    <include app:graph="@navigation/main_content_navigation_graph" />
 </navigation>
