added update user and delete user code and resoleved register session bug

--- a/app/src/main/res/layout/fragment_profile_screen.xml
+++ b/app/src/main/res/layout/fragment_profile_screen.xml
@@ -42,7 +42,7 @@
                         android:id="@+id/tiet_email_profile_screen_fragment"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="dhirajchhabra630@outlook.com" />
+                        tools:text="dhirajchhabra630@outlook.com" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -62,7 +62,7 @@
                         android:id="@+id/tiet_first_name_profile_screen_fragment"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Dhiraj" />
+                        tools:text="Dhiraj" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -81,7 +81,7 @@
                         android:id="@+id/tiet_last_name_profile_screen_fragment"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Chhabra" />
+                        tools:text="Chhabra" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
