--- a/app/src/main/res/layout/fragment_edit_poem_screen.xml
+++ b/app/src/main/res/layout/fragment_edit_poem_screen.xml
@@ -7,7 +7,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingBottom="120dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -68,12 +69,11 @@
             <EditText
                 android:id="@+id/body_edit_poem_screen_fragment"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="150dp"
-                android:layout_weight="1"
                 android:background="@null"
                 android:padding="0dp"
                 android:textSize="24sp"
@@ -90,10 +90,10 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_gravity="end"
-            android:orientation="horizontal"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:orientation="horizontal">
 
             <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                 android:id="@+id/extended_fab_suggestions_edit_poem_screen_fragment"
@@ -108,9 +108,9 @@
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/floating_action_button_insert_edit_poem_screen_fragment"
                 android:layout_width="wrap_content"
-                android:visibility="gone"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
+                android:visibility="gone"
                 app:backgroundTint="@color/colorPrimary"
                 app:srcCompat="@drawable/ic_add_black_24dp" />
 
@@ -127,28 +127,38 @@
             tools:visibility="visible">
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/floating_action_button_right_edit_poem_screen_fragment"
-                android:layout_width="wrap_content"
+                android:id="@+id/floating_action_button_left_edit_poem_screen_fragment"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_marginVertical="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_weight="1"
                 app:backgroundTint="@color/colorPrimary"
                 app:fabSize="mini"
                 app:srcCompat="@drawable/ic_keyboard_arrow_left_white_24dp" />
 
-            <TextView
-                android:id="@+id/tv_suggestions_edit_poem_screen_fragment"
+            <ScrollView
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                android:layout_weight="1"
-                tools:text="" />
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginVertical="8dp"
+                android:layout_weight="4">
+
+                <TextView
+                    android:id="@+id/tv_suggestions_edit_poem_screen_fragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    tools:text="" />
+
+            </ScrollView>
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/floating_action_button_left_edit_poem_screen_fragment"
-                android:layout_width="wrap_content"
+                android:id="@+id/floating_action_button_right_edit_poem_screen_fragment"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_marginVertical="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_weight="1"
                 app:backgroundTint="@color/colorPrimary"
                 app:fabSize="mini"
                 app:srcCompat="@drawable/ic_keyboard_arrow_right_white_24dp" />
