--- a/app/src/main/res/layout/fragment_edit_genre_bottom_modal_sheet.xml
+++ b/app/src/main/res/layout/fragment_edit_genre_bottom_modal_sheet.xml
@@ -64,6 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Done"
+        android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
