--- a/app/src/main/res/layout/fragment_edit_title_modal_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_edit_title_modal_bottom_sheet.xml
@@ -38,6 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Done"
+        android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
